# hfsp

./: .gitattributes  .gitignore  Makefile  README.md  dune-project  hfsp.opam
.github/workflows/: build_and_test.yml
_scripts/: run_mmseqs.sh
lib/: dune  lib.ml
test/: dune  test_lib.ml
test/basic_test.t/: run.t  search.tsv
